# youtube-analytics-project

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-3/: main.py
homework-5/: main.py
src/: channel.py  playlist.py  video.py
