[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Dmitry Pavlushin <pavlushindv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"
build = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
